--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,11 @@
 ^lottodata\.Rproj$
 ^\.Rproj\.user$
+^data-raw$
+^LICENSE\.md$
+^README\.Rmd$
+^CODE_OF_CONDUCT\.md$
+^doc$
+^Meta$
+^_pkgdown\.yml$
+^docs$
+^pkgdown$
