--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,25 @@
 Package: lottodata
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Provides easy access to lottery data sets for research purposes
+Version: 0.0.1
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Andrew",
+           family = "Li",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "andrew-li@alumni.ubc.ca",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+Description: This is an R data package which contains several semi-tidied data obtained from Opensource Sceince Framework. The data was originally made available by [Ross Otto](https://www.mcgill.ca/psychology/ross-otto). 
+    Designed with easy access and shareability in mind. 
+License: CC0
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Suggests: 
+    testthat,
+    knitr,
+    rmarkdown
+Imports: 
+    dplyr,
+    readr,
+    tibble
+VignetteBuilder: knitr
